Manifest/Production/Backend/p-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-prod
  namespace: production
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: backend-prod
    spec:
      containers:
        - name: backend-prod
          image: 768876311475.dkr.ecr.ap-southeast-1.amazonaws.com/backend-prod:latest
          ports:
            - containerPort: 4000
          resources:
            limits:
              cpu: 600m
              memory: 768Mi
            requests:
              cpu: 200m
              memory: 384Mi
  selector:
    matchLabels:
      app: backend-prod
