Manifest/Production/Backend/p-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-prod-service
  namespace: production
spec:
  ports:
    - port: 4000
      protocol: TCP
      targetPort: 4000
  selector:
    app: backend-prod
  type: ClusterIP
