Manifest/Production/Backend/p-backend-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: backend-prod-ingress
  namespace: production
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/acme-challenge-type: "http01"	
    cert-manager.io/cluster-issuer: "letsencrypt-backend-prod"
spec:
  rules:
  ## Service Location n Characters
  - host: backend.ical.host
    http:
      paths:
      - backend:
          serviceName: backend-prod-service
          servicePort: 4000
        path: /
  tls:
    - hosts:
      - backend.ical.host
      secretName: backend-prod-tls
